--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
   "license": "Apache-2.0",
   "dependencies": {
     "canvas": "^2.11.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "node-fetch": "^3.3.2",
-    "nodemailer": "^6.9.5",
-    "pdfkit": "^0.13.0",
-    "qrcode": "^1.5.3",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.1",
-    "cors": "^2.8.5"
+    "pdfkit": "^0.13.0",
+    "puppeteer": "^21.7.0",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
